# default-risk-classifier

./: .gitignore  config.py  pyproject.toml
notebooks/: 00_data_validation.ipynb  01_eda.ipynb  02_feature_engineering.ipynb  03_supervised_modeling.ipynb  04_unsupervised_modeling.ipynb
reports/metrics/: best_thresholds_max_f1.csv  best_thresholds_max_precision_min_recall_over_70.csv  cluster_labels.csv  clustering_model_metrics.csv  final_supervised_model_selection.csv  logistic_regression_coefficients.csv  logistic_regression_threshold_sensitivity.csv  permutation_feature_importances.csv  supervised_model_metrics.csv  supervised_model_selection_table.csv  threshold_tuning_results.csv  tree_based_native_feature_importances.csv
reports/models/: bisecting_kmeans_k3.joblib  bisecting_kmeans_k4.joblib  bisecting_kmeans_k5.joblib  bisecting_kmeans_k6.joblib  decision_tree_depth4.joblib  gaussian_mixture_k3.joblib  gaussian_mixture_k4.joblib  gaussian_mixture_k5.joblib  gaussian_mixture_k6.joblib  gradient_boosting_light.joblib  kmeans_k3.joblib  kmeans_k4.joblib  kmeans_k5.joblib  kmeans_k6.joblib  logistic_regression_baseline.joblib  minibatch_kmeans_k3.joblib  minibatch_kmeans_k4.joblib  minibatch_kmeans_k5.joblib  minibatch_kmeans_k6.joblib
src/clustering/: cluster_interpretation.py  cluster_separation.py  cluster_seperation.py  clustering_evaluation.py  clustering_models.py  clustering_preprocessing.py
src/data/: data_loader.py
src/eda/: eda_utils.py
src/features/: build_features.py  feature_engineering.py
src/models/: model_evaluation.py  model_selection.py  (+4 more)
(+1 files in other folders)
