[project]
name = "default-risk-classifier"
version = "0.1.0"
description = "Default risk classification and customer segment clustering"
authors = [
    {name = "Gorkem Yencak"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]
